# taskd

./: .gitignore  .gitmodules  AGENTS.md  CMakeCache.txt  CMakeLists.txt  Makefile  PROTOCOL.md  README.md  cmake_install.cmake  fs_utils.h  protocol.h  sample_recipe.json  sm_test.c  state_machine.c  state_machine.h  state_machine_instruction_set.md  taskd  taskd.c
test/: archive.tar
